--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/api"
+  "proxy": "https://p6pn2bssq4.ap-southeast-2.awsapprunner.com/api"
 }
